--- a/.editorconfig
+++ b/.editorconfig
@@ -3,7 +3,7 @@ root = true
 [*]
 charset = utf-8
 end_of_line = lf
-indent_size = 4
+indent_size = 2
 indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
@@ -16,3 +16,10 @@ indent_size = 2
 
 [docker-compose.yml]
 indent_size = 4
+
+[.vue]
+indent_size = 2
+[.js]
+indent_size = 2
+[.ts]
+indent_size = 2
