--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "lint": "eslint --fix --ext .ts,.vue ."
-    },
-    "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^6.21.0",
-        "@vitejs/plugin-vue": "^5.0.3",
-        "axios": "^1.6.4",
-        "eslint": "^8.56.0",
-        "eslint-config-standard": "^17.1.0",
-        "eslint-config-standard-with-typescript": "^43.0.1",
-        "eslint-plugin-import": "^2.29.1",
-        "eslint-plugin-n": "^16.6.2",
-        "eslint-plugin-promise": "^6.1.1",
-        "eslint-plugin-vue": "^9.21.1",
-        "laravel-vite-plugin": "^1.0.0",
-        "prettier": "^3.2.5",
-        "ts-loader": "^9.5.1",
-        "typescript": "^5.3.3",
-        "vite": "^5.0.0"
-    }
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint --fix --ext .ts,.vue ."
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@vitejs/plugin-vue": "^5.0.3",
+    "axios": "^1.6.4",
+    "eslint": "^8.56.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vue": "^9.21.1",
+    "laravel-vite-plugin": "^1.0.0",
+    "prettier": "^3.2.5",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.0"
+  },
+  "dependencies": {
+    "vite-plugin-vuetify": "^2.0.1",
+    "@mdi/font": "^7.4.47"
+  }
 }
