--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@vitejs/plugin-vue": "^5.0.3",
+    "autoprefixer": "^10.4.17",
     "axios": "^1.6.4",
     "eslint": "^8.56.0",
     "eslint-config-standard": "^17.1.0",
@@ -18,13 +19,15 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.21.1",
     "laravel-vite-plugin": "^1.0.0",
+    "postcss": "^8.4.35",
     "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.1",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.0"
   },
   "dependencies": {
-    "vite-plugin-vuetify": "^2.0.1",
-    "@mdi/font": "^7.4.47"
+    "@mdi/font": "^7.4.47",
+    "vite-plugin-vuetify": "^2.0.1"
   }
 }
