--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "tailwindcss": "^3.4.1",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vue-router": "^4.2.5"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
