--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,14 @@
         "module": "es2020",
         "moduleResolution": "node",
         "baseUrl": "./",
-        "strict": true,         // Enable strict type-checking options
-        "skipLibCheck": true,   // Skip type checking of declaration files
-        "noImplicitAny": false  // Bypass raising errors on `any` type
+        "strict": true, // Enable strict type-checking options
+        "skipLibCheck": true, // Skip type checking of declaration files
+        "noImplicitAny": false // Bypass raising errors on `any` type
     },
-    "include": ["resources/js/**/*"], // Frontend paths pattern
-    "exclude": ["node_modules"] // Frontend paths pattern
+    "include": [
+        "resources/js/**/*"
+    ], // Frontend paths pattern
+    "exclude": [
+        "node_modules"
+    ] // Frontend paths pattern
 }
