--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,35 @@
 {
     "compilerOptions": {
         "target": "es5",
-        "module": "es2020",
+        "module": "esnext",
+        "strict": true,
+        "jsx": "preserve",
+        "importHelpers": true,
         "moduleResolution": "node",
-        "baseUrl": "./",
-        "strict": true, // Enable strict type-checking options
-        "skipLibCheck": true, // Skip type checking of declaration files
-        "noImplicitAny": false // Bypass raising errors on `any` type
+        "skipLibCheck": true,
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "sourceMap": true,
+        "baseUrl": ".",
+        "paths": {
+            "@/*": [
+                // /から始まるようにします
+                "./resources/js/*"
+            ]
+        },
+        "lib": [
+            "esnext",
+            "dom",
+            "dom.iterable",
+            "scripthost"
+        ]
     },
     "include": [
-        "resources/js/**/*"
-    ], // Frontend paths pattern
+        "./resources/js"
+    ],
     "exclude": [
-        "node_modules"
-    ] // Frontend paths pattern
+        "node_modules",
+        "db_data",
+        "vendor"
+    ]
 }
